feat: Add indexes & CLAUDE.md
